# cpp-ethereum

./: CMakeLists.txt
cmake/scripts/: install_deps.cmake
etomicswap/: CMakeLists.txt  alice.c  bob.c  etomiccurl.c  etomiclib.cpp  etomiclib.h  lib.cpp  lib.h
libdevcore/: CMakeLists.txt  Common.cpp  db.h
libdevcrypto/: CMakeLists.txt
libethcore/: Common.cpp  TransactionBase.cpp
testlib/: CMakeLists.txt  lib.cpp  lib.h  main.c
