cmake_minimum_required(VERSION 2.8.9)
add_library(etomiclib etomiclib.cpp)
add_executable(alice alice.c)
add_executable(bob bob.c)
target_link_libraries(etomiclib PRIVATE ethcore devcrypto devcore)
target_link_libraries(alice PUBLIC etomiclib curl cjson)
target_link_libraries(bob PUBLIC etomiclib curl cjson)